# wave-function-collapse

./: CMakeLists.txt  README.md
include/: image_handler.h  printer.h  utils.h  wfc.h  wfc_bitmap.h
src/: image_handler.cpp  main.cpp  printer.cpp  wfc.cpp  wfc_bitmap.cpp
